 * Streaming output wizard rewrite
 * Numerous fixes

libVLC:
 * new libvlc_audio_output_device_list_get and libvlc_audio_output_device_list_release functions
   to replace the deprecated libvlc_audio_output_device_count, libvlc_audio_output_device_longname
   and libvlc_audio_output_device_id
 * new libvlc_log_subscribe and libvlc_log_unsubscribe function to register logging callbacks

Removed modules:
 * portaudio audio output: use the native audio output instead
 * X11 On Screen Display notifications (xosd)
 * Linux Framebuffer On Screen Display interface (fbosd)
 * PVR: IVTV analog TV encoder - use V4L instead
 * RTMP access: use libavformat avio instead
 * RTMP access_output: use libavformat avio instead
 * Hildon GUI
 * MSN messenger "now playing" (broken and unmaintained since VLC 1.0.0)
 * Telepathy framework "now playing" (broken and unmaintained since VLC 1.0.0)


Changes between 2.0.2 and 2.0.3:
--------------------------------

Access:
 * Fix some HTTP request that broke some radio channels

Demuxers:
 * Fix support for some flv files (notably joined)
 * Fix a crash when opening ape files with ID3v1 tags

Mac OS X:
 * Add GateKeeper support
 * Fix handling for some hotkeys
 * Fix fullscreen toggle over extra interfaces
 * Minor bugfixes and improvements

Qt:
 * Fix Windows 8 interface style

Translations:
 * Updates for Breton, Czech, Dutch, Gaelic, German, Hebrew, Hindi, Icelandic,
   Japanese, Khmer, Korean, Polish, Russian, Simplified Chinese, Slovenian,
   Thai, Turkish and Walloon
 * New translations to Uzbek and Marathi
 * Fix activation of Gaelic and Thai translations


Changes between 2.0.1 and 2.0.2:
--------------------------------

Video Output:
 * XP machine will now use DirectX mode by default, like in previous versions.
   There were too many errors with broken drivers.
 * More accurate colourspaces conversions for YUV->RGB in OpenGL
 * Add menu support for libvlc / VLCKit applications on Mac OS X